--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,23 @@ label {
   padding: 40px 40px;
 }
 
+.list {
+  text-align: left;
+  max-width: 750px;
+  margin: auto;
+}
+
+.submit-form {
+  max-width: 300px;
+  margin: auto;
+}
+
+.edit-form {
+  max-width: 300px;
+  margin: auto;
+}
+
+
 .card {
   background-color: #f7f7f7;
   padding: 20px 25px 30px;
